css/style.css
/* ... */
.pricing-column.highlight .pricing-column-content, .pricing-column.highlight h3  {
	border: none;
}
.pricing-column.highlight h3 .highlight-reason {
	display: block;
    color: rgba(0,0,0,0.4);
    text-transform: uppercase;
    letter-spacing: 1.5px;
    font-size: 12px;
}
.pricing-column.highlight .pricing-column-content {
	border-right: 1px solid #eee;
	border-bottom: 1px solid #eee;
	border-left: 1px solid #eee;
}
.pricing-table .popover{
	text-align:center;
}
.pricing-column ul li {
	padding: 10px 25px;
	border-bottom: 1px solid #eee;
	color: #666666!important;
	list-style: none;
	line-height: 18px;
}
.pricing-column ul li a{
	margin-left:10px;
}
.pricing-column ul li:first-child {
	border-top: 1px solid #eee;
}
.pricing-column ul li:nth-child(2n+1) {
	background-color: #F9F8F5;
}
.pricing-column.highlight h3 {
	margin-bottom: 0px!important;
	padding: 15px 0px;
	color: #ffffff!important;
}
.toggle .pricing-column h3 {
	font-size: 26px!important;
}
.pricing-column h3 {
	margin-bottom: 0px;
	padding: 18px 0px 18px 0px;
	border-top: 1px solid #eee;
	border-right: 1px solid #eee;
	border-bottom: 1px solid #eee;
	background-color: #ffffff;
	font-size: 26px;
	line-height: 28px;
}
.pricing-column h4 {
	margin-bottom: 0px;
	margin-left: -22px;
	padding: 20px 30px 6px 30px;	
	color: #333333;
	font-size: 54px!important;
	line-height: 42px!important;
}
.pricing-column h4 .dollar-sign {
	position: relative;
	top: -14px;
	right: -6px;
	font-size: 22px;
	line-height: 22px;
}
.pricing-column .interval {
	display: block;
	padding-bottom: 17px;
	min-height: 38px;
	color: #999999;
}
.pricing-column ul {
	margin-left: 0px;
}
.pricing-column .btn{
	margin-top:25px;
}
.pricing-column.highlight .btn{
	margin-bottom:20px;
}
.pricing-table.six-cols > div {
	width: 16.5%;
}
.pricing-table.five-cols > div {
	width: 20%;
}
.pricing-table.four-cols > div {
	width: 25%;
}
.pricing-table.three-cols > div {
	width: 33.2%;
}
.pricing-table.two-cols > div {
	width: 50%;
}
.cProgress {
    width: 60px;
    display: inline-block;
    position: relative;
    text-align: center;
    line-height: 1.2;
	background:#fff;
	border-radius:100%;
	cursor:default;
	color:#666;
}
.cProgress canvas {
    vertical-align: top;
}
.cProgress strong {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    text-align: center;
    line-height: 60px;
    font-size: 16px;
}
.cProgress strong i {
    font-style: normal;
    font-size: 0.6em;
    font-weight: normal;
}
.cProgress span {
    display: block;
    color: #aaa;
    margin-top: 12px;
}


/* ==================================================
   7. Responsive Media Queries
================================================== */

@media (min-width:1200px){
	li.parallax {
		background-size: contain;
	}
}

@media (min-width:1200px){
}
@media (min-width: 992px) and (max-width: 1199px) {
	.site-header .container, .main-navigation .container, .quote-teaser .container, .topbar .container{
		width:100%;
	}
	.site-tagline{
		display:none
	}
	.dd-menu > li{
		margin-right:25px;
	}
	.site-header-right .dd-menu > li{
		margin-left:25px;
	}
	.widget .btn-block{
		padding-left:12px;
		padding-right:12px;
	}
	.feature-text a{
		font-size:inherit;
	}
	.counters .timer{
		font-size:38px!important;
	}
}
/* ... */

